--- a/web/AuDD/langue.html
+++ b/web/AuDD/langue.html
@@ -28,8 +28,9 @@
           </div>
           <div class="col-sm-4">
             <div class="table-left wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"> <i class="ion-ios-paperplane-outline"></i> </div>
+                <div class="review-single"><img class="img-circle" src="images/anglais.png" alt="Client Testimonoal" /></div>
               <div class="pricing-details">
+                  <br>
                 <h2>Formation en Anglais</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
               </div>
@@ -37,8 +38,9 @@
           </div>
           <div class="col-sm-4">
             <div class="table-right wow fadeInUp" data-wow-delay="0.6s">
-              <div class="icon"> <i class="ion-ios-color-wand-outline"></i> </div>
+                <div class="review-single"><img class="img-circle" src="images/russe.jpg" alt="Client Testimonoal" /></div>
               <div class="pricing-details">
+                  <br>
                 <h2>Formation en Russe</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
               </div>
@@ -46,8 +48,9 @@
           </div>
           <div class="col-sm-4">
             <div class="table-right wow fadeInUp" data-wow-delay="0.6s">
-              <div class="icon"> <i class="ion-ios-color-wand-outline"></i> </div>
+                <div class="review-single"><img class="img-circle" src="images/espagnol.png" alt="Client Testimonoal" /> </div>
               <div class="pricing-details">
+                  <br>
                 <h2>Formation en Espagnol</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
               </div>
@@ -55,8 +58,9 @@
           </div>
           <div class="col-sm-4">
             <div class="table-right wow fadeInUp" data-wow-delay="0.6s">
-              <div class="icon"> <i class="ion-ios-color-wand-outline"></i> </div>
+                <div class="review-single"><img class="img-circle" src="images/chinois.jpg" alt="Client Testimonoal" /> </div>
               <div class="pricing-details">
+                  <br>
                 <h2>Formation en Chinois</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
               </div>
@@ -64,8 +68,9 @@
           </div>
           <div class="col-sm-4">
             <div class="table-right wow fadeInUp" data-wow-delay="0.6s">
-              <div class="icon"> <i class="ion-ios-color-wand-outline"></i> </div>
+                <div class="review-single"><img class="img-circle" src="images/corée.png" alt="Client Testimonoal" /> </div>
               <div class="pricing-details">
+                  <br>
                 <h2>Formation en Coréen</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
               </div>
@@ -73,8 +78,9 @@
           </div>
           <div class="col-sm-4">
             <div class="table-right wow fadeInUp" data-wow-delay="0.6s">
-              <div class="icon"> <i class="ion-ios-color-wand-outline"></i> </div>
+                <div class="review-single"><img class="img-circle" src="images/allemand.jpg" alt="Client Testimonoal" /> </div>
               <div class="pricing-details">
+                  <br>
                 <h2>Formation en Allemand</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
               </div>
