--- a/web/AuDD/Reseau.html
+++ b/web/AuDD/Reseau.html
@@ -28,7 +28,7 @@
           </div>
           <div class="col-sm-4">
             <div class="table-left wow fadeInUp" data-wow-delay="0.4s">
-              <div> <img class="img-circle" src="images/logo-php.png"/></div>
+              <div> <img class="img-circle" src="images/infra.jpg"/></div>
               <div class="pricing-details">
                 <h2>Formation en Infrastructure</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
@@ -37,7 +37,7 @@
           </div>
           <div class="col-sm-4">
             <div class="table-right wow fadeInUp" data-wow-delay="0.6s">
-              <div>  <img class="img-circle" src="images/java.jpg"/> </div>
+              <div>  <img class="img-circle" src="images/admin.png"/> </div>
               <div class="pricing-details">
                 <h2>Formation en Administration</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
@@ -46,7 +46,7 @@
           </div>
           <div class="col-sm-4">
             <div class="table-right wow fadeInUp" data-wow-delay="0.6s">
-                <div>  <img class="img-circle" src="images/python.png"/> </div>
+                <div>  <img class="img-circle" src="images/secu.jpg"/> </div>
               <div class="pricing-details">
                 <h2>Formation en Sécurité</h2>
                 <button class="btn btn-primary btn-action btn-fill">Inscription</button>
